Fixed counter not giving win or fail alert correctly. Fixed display AND console log not showing correc t random number (thanks Jon & Josh). Fixed on lose/win current total number not clearing. Added background image. Adde d lose & win sound effects. Added new font to text. Added new font specific to h1. Added some more css and realigned bo xes. Phew

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,78 @@
 body {
-    background-color: rgb(219, 162, 88);
-    
+    background-image: url("https://wallpaperplay.com/walls/full/8/8/5/173574.jpg");
+    background-size: 1600px 880px;
+    background-repeat: no-repeat;
 }
 
 h1 {
+    margin: auto;
+    width: 33.33%;
+    padding: 10px;
     font-weight:bold;
     font-size: 30px;
-    background-color: rgb(197, 187, 140);
-    display:inline;
-    padding:4px;
-    margin:10px;
+    background-color:rgba(128, 128, 128, 0.747);
+    text-align:center;
+    border: 1px solid grey;
+    color:white;
+    font-size:32px;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .txt-instructions {
-    padding: 4px 8px 8px 8px;
-    background-color: beige;
+    padding: 0px 0px 8px 4px;
+    background-color: rgba(245, 245, 220, 0.582);
     margin:10px;
-    height:210px;
-    width:640px;
+    height:226px;
+    width:652px;
+    border: 1px solid grey;
+    font-size: 16.2px;
+    font-weight:bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 #random-number {
-    background-color:rgb(44, 150, 44);
-    margin:10px;
-    padding:10px;
-    height:30px;
-    width: 400px;
+    background-color:rgba(44, 150, 44, 0.774);
+    color:white;
+    margin:12px 8px 4px 8px;
+    display:inline-block;
+    width:23.2%;
     text-align:center;
     font-weight:bold;
-    font-size:28px;
+    font-size:40px;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid grey;
 }
 
 .counters {
-    padding:10px;
-    background-color: rgb(55, 150, 150);
-    margin:10px;
-    height:80px;
-    width:200px;
+    background-color: rgba(64, 136, 124, 0.856);
+    margin:9px 9px 9px 9px;
+    padding:2px;
+    width:22.9%;
+    color:white;
+    font-size:20px;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid grey;
 }
 
 #crystal-array {
-    margin:6px;
-    padding:6px;
+    margin:2px;
+    padding:2px;
 }
 
 #crystal-array img{
     height:80px;
     width:80px;
     border-style:outset;
-    float:left;
-}
-
-.txt-your-total-score {
-    text-align:center;
-    background-color: cyan;
-    margin:10px;
-    padding:8px 100px 8px 8px;
-    font-weight:bold;
+    margin: 0px 3px 0px 3px;
 }
 
 #revolving-total {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.541);
     font-weight:bold;
-    margin:10px;
+    font-size: 20px;
+    margin: 0px 3px 0px 6.5px;
     padding:10px;
-}
+    width: 22.2%;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid grey;
+};
